--- a/.env.example
+++ b/.env.example
@@ -19,14 +19,14 @@ SECURED_VIEW_JWK=
 SECURED_VIEW_JWT_ACCESS_TOKEN_EXPIRATION=5
 SECURED_VIEW_JWT_REFRESH_TOKEN_EXPIRATION=1440
 
-STORAGE_DRIVER=apps.files.storage.filesystem.FileSystemStorage
+EVILFLOWERS_STORAGE_DRIVER=apps.files.storage.filesystem.FileSystemStorage
 
-STORAGE_FILESYSTEM_DATADIR=/mnt/data
+EVILFLOWERS_STORAGE_FILESYSTEM_DATADIR=/mnt/data
 
-STORAGE_S3_HOST=127.0.0.1
-STORAGE_S3_ACCESS_KEY=O8TgsPCaWvzvl6xR
-STORAGE_S3_SECRET_KEY=fpVFOivTa1NlPcBcKbCp8EGHaJe5m2Oq
-STORAGE_S3_SECURE=False
-STORAGE_S3_BUCKET=evilflowers
+EVILFLOWERS_STORAGE_S3_HOST=127.0.0.1
+EVILFLOWERS_STORAGE_S3_ACCESS_KEY=O8TgsPCaWvzvl6xR
+EVILFLOWERS_STORAGE_S3_SECRET_KEY=fpVFOivTa1NlPcBcKbCp8EGHaJe5m2Oq
+EVILFLOWERS_STORAGE_S3_SECURE=False
+EVILFLOWERS_STORAGE_S3_BUCKET=evilflowers
 
-CONTACT_EMAIL=arthur.dent@example.com
+EVILFLOWERS_CONTACT_EMAIL=arthur.dent@example.com
