--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -6,7 +6,7 @@ port = 0.0.0.0:9001
 
 [program:gunicorn]
 directory=/usr/src/app
-command=/opt/venv/bin/gunicorn -b 0.0.0.0:8000 -w 4 evil_flowers_catalog.wsgi --log-level=debug --log-file=/var/log/gunicorn.log
+command=/opt/venv/bin/gunicorn -b 0.0.0.0:8000 -w 4 evil_flowers_catalog.wsgi --log-level=debug --log-file=/var/log/gunicorn.log --timeout 240
 autostart=true
 autorestart=true
 priority=900
