--- a/requirements.txt
+++ b/requirements.txt
@@ -8,28 +8,26 @@ certifi==2023.7.22 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.15.1 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
 cryptography==41.0.3 ; python_version >= "3.11" and python_version < "4.0"
-defusedxml==0.7.1 ; python_version >= "3.11" and python_version < "4.0"
 django-api-forms==1.0.0rc9 ; python_version >= "3.11" and python_version < "4.0"
 django-cors-headers==4.2.0 ; python_version >= "3.11" and python_version < "4.0"
 django-filter==23.2 ; python_version >= "3.11" and python_version < "4.0"
 django-imap-backend==0.2.3 ; python_version >= "3.11" and python_version < "4.0"
 django-object-checker==1.0.2 ; python_version >= "3.11" and python_version < "4.0"
 django==4.2.4 ; python_version >= "3.11" and python_version < "4.0"
-fonttools==4.42.0 ; python_version >= "3.11" and python_version < "4.0"
-fpdf2==2.7.5 ; python_version >= "3.11" and python_version < "4.0"
 isbnlib==3.10.14 ; python_version >= "3.11" and python_version < "4.0"
-minio==7.1.15 ; python_version >= "3.11" and python_version < "4.0"
+minio==7.1.16 ; python_version >= "3.11" and python_version < "4.0"
 pillow==10.0.0 ; python_version >= "3.11" and python_version < "4.0"
-porcupine-python==0.5.0 ; python_version >= "3.11" and python_version < "4.0"
+porcupine-python==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
 psycopg-c==3.1.10 ; python_version >= "3.11" and python_version < "4.0"
 psycopg[c]==3.1.10 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1-modules==0.3.0 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.5.0 ; python_version >= "3.11" and python_version < "4.0"
 pycountry==22.3.5 ; python_version >= "3.11" and python_version < "4"
 pycparser==2.21 ; python_version >= "3.11" and python_version < "4.0"
-pydantic==1.7.4 ; python_version >= "3.11" and python_version < "4.0"
+pydantic==1.10.12 ; python_version >= "3.11" and python_version < "4.0"
+pymupdf==1.23.2 ; python_version >= "3.11" and python_version < "4.0"
+pymupdfb==1.23.0 ; python_version >= "3.11" and python_version < "4.0"
 pyparsing==3.1.1 ; python_version >= "3.11" and python_version < "4.0"
-pypdf==3.15.1 ; python_version >= "3.11" and python_version < "4.0"
 pypng==0.20220715.0 ; python_version >= "3.11" and python_version < "4.0"
 python-crontab==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -38,7 +36,7 @@ python-ldap==3.4.3 ; python_version >= "3.11" and python_version < "4.0"
 qrcode==7.4.2 ; python_version >= "3.11" and python_version < "4.0"
 redis==5.0.0 ; python_version >= "3.11" and python_version < "4.0"
 sentry-sdk==1.29.2 ; python_version >= "3.11" and python_version < "4.0"
-setuptools==68.1.0 ; python_version >= "3.11" and python_version < "4"
+setuptools==68.1.2 ; python_version >= "3.11" and python_version < "4"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlparse==0.4.4 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.7.1 ; python_version >= "3.11" and python_version < "4.0"
