Upload Pages artifact

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,3 +16,21 @@ jobs:
     - name: Build docs
       run: |
         npx @redocly/cli build-docs -o docs/index.html docs/openapi.yaml
+  deploy:
+    needs: build
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v2
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2 # or the latest "vX.X.X" version tag for this action
