--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ minio = { version = "^7.1.12", optional = true }
 qrcode = "^7.4"
 bibtexparser = "^1.4.0"
 isbnlib = "^3.10.14"
+django-partial-date = "^1.3.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.0"
