--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,14 @@ bibtexparser==1.4.1 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2023.7.22 ; python_version >= "3.12" and python_version < "4.0"
 cffi==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Windows"
-cryptography==41.0.4 ; python_version >= "3.12" and python_version < "4.0"
+cryptography==41.0.5 ; python_version >= "3.12" and python_version < "4.0"
 django-api-forms==1.0.0rc9 ; python_version >= "3.12" and python_version < "4.0"
 django-cors-headers==4.3.0 ; python_version >= "3.12" and python_version < "4.0"
 django-filter==23.3 ; python_version >= "3.12" and python_version < "4.0"
 django-imap-backend==0.2.3 ; python_version >= "3.12" and python_version < "4.0"
 django-object-checker==1.0.2 ; python_version >= "3.12" and python_version < "4.0"
-django==4.2.6 ; python_version >= "3.12" and python_version < "4.0"
+django-partial-date==1.3.2 ; python_version >= "3.12" and python_version < "4.0"
+django==4.2.7 ; python_version >= "3.12" and python_version < "4.0"
 isbnlib==3.10.14 ; python_version >= "3.12" and python_version < "4.0"
 minio==7.1.17 ; python_version >= "3.12" and python_version < "4.0"
 pillow==10.1.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -34,7 +35,7 @@ python-dotenv==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 python-ldap==3.4.3 ; python_version >= "3.12" and python_version < "4.0"
 qrcode==7.4.2 ; python_version >= "3.12" and python_version < "4.0"
 redis==5.0.1 ; python_version >= "3.12" and python_version < "4.0"
-sentry-sdk==1.32.0 ; python_version >= "3.12" and python_version < "4.0"
+sentry-sdk==1.33.1 ; python_version >= "3.12" and python_version < "4.0"
 setuptools==68.2.2 ; python_version >= "3.12" and python_version < "4"
 six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
 sqlparse==0.4.4 ; python_version >= "3.12" and python_version < "4.0"
