--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,8 @@ django = "^4.2.0"
 django_api_forms = "1.0.0rc9"
 python-dotenv = "^1.0"
 argon2-cffi = "^23.1.0"
-sentry-sdk = "^1.29"
+sentry-sdk = "^1.34"
 psycopg = {version = "^3.1", extras = ["c"]}
-porcupine-python = "^0"
 django-imap-backend = "^0"
 django-filter = "^23.2"
 redis = "^5"
@@ -30,6 +29,7 @@ qrcode = "^7.4"
 bibtexparser = "^1.4.0"
 isbnlib = "^3.10.14"
 django-partial-date = "^1.3.2"
+pydantic = "^2.4.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.0"
