--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.6.0 ; python_version >= "3.12" and python_version < "4.0"
 argon2-cffi-bindings==21.2.0 ; python_version >= "3.12" and python_version < "4.0"
 argon2-cffi==23.1.0 ; python_version >= "3.12" and python_version < "4.0"
 asgiref==3.7.2 ; python_version >= "3.12" and python_version < "4.0"
@@ -15,18 +16,19 @@ django-object-checker==1.0.2 ; python_version >= "3.12" and python_version < "4.
 django-partial-date==1.3.2 ; python_version >= "3.12" and python_version < "4.0"
 django==4.2.7 ; python_version >= "3.12" and python_version < "4.0"
 isbnlib==3.10.14 ; python_version >= "3.12" and python_version < "4.0"
-minio==7.1.17 ; python_version >= "3.12" and python_version < "4.0"
+minio==7.2.0 ; python_version >= "3.12" and python_version < "4.0"
 pillow==10.1.0 ; python_version >= "3.12" and python_version < "4.0"
-porcupine-python==0.6.0 ; python_version >= "3.12" and python_version < "4.0"
 psycopg-c==3.1.12 ; python_version >= "3.12" and python_version < "4.0"
 psycopg[c]==3.1.12 ; python_version >= "3.12" and python_version < "4.0"
 pyasn1-modules==0.3.0 ; python_version >= "3.12" and python_version < "4.0"
 pyasn1==0.5.0 ; python_version >= "3.12" and python_version < "4.0"
 pycountry==22.3.5 ; python_version >= "3.12" and python_version < "4"
 pycparser==2.21 ; python_version >= "3.12" and python_version < "4.0"
-pydantic==1.10.13 ; python_version >= "3.12" and python_version < "4.0"
-pymupdf==1.23.5 ; python_version >= "3.12" and python_version < "4.0"
-pymupdfb==1.23.5 ; python_version >= "3.12" and python_version < "4.0"
+pycryptodome==3.19.0 ; python_version >= "3.12" and python_version < "4.0"
+pydantic-core==2.14.1 ; python_version >= "3.12" and python_version < "4.0"
+pydantic==2.5.0 ; python_version >= "3.12" and python_version < "4.0"
+pymupdf==1.23.6 ; python_version >= "3.12" and python_version < "4.0"
+pymupdfb==1.23.6 ; python_version >= "3.12" and python_version < "4.0"
 pyparsing==3.1.1 ; python_version >= "3.12" and python_version < "4.0"
 pypng==0.20220715.0 ; python_version >= "3.12" and python_version < "4.0"
 python-crontab==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -35,10 +37,10 @@ python-dotenv==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 python-ldap==3.4.3 ; python_version >= "3.12" and python_version < "4.0"
 qrcode==7.4.2 ; python_version >= "3.12" and python_version < "4.0"
 redis==5.0.1 ; python_version >= "3.12" and python_version < "4.0"
-sentry-sdk==1.34.0 ; python_version >= "3.12" and python_version < "4.0"
+sentry-sdk==1.35.0 ; python_version >= "3.12" and python_version < "4.0"
 setuptools==68.2.2 ; python_version >= "3.12" and python_version < "4"
 six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
 sqlparse==0.4.4 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.8.0 ; python_version >= "3.12" and python_version < "4.0"
 tzdata==2023.3 ; python_version >= "3.12" and python_version < "4.0"
-urllib3==2.0.7 ; python_version >= "3.12" and python_version < "4.0"
+urllib3==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
