Black formatter (fixed CI/CD)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,4 +16,4 @@ jobs:
         python -m pip install black
     - name: Lint with black
       run: |
-         flake8 --check
+        black --check
