--- a/.github/workflows/github-publish.yml
+++ b/.github/workflows/github-publish.yml
@@ -60,7 +60,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: amd64,arm64v8
+          platforms: amd64,arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
