--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "evil_flowers_catalog"
 version = "0.7.0"
-description = "Simple books catalog compatible with OPDS written in Python"
-authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
+description = "Publication catalog compatible with OPDS"
+authors = ["Jakub Dubec <jakub.dubec@stuba.sk>"]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -17,7 +17,7 @@ django-filter = "^23.2"
 redis = "^5"
 Pillow = "^10"
 python-crontab = "^3"
-pycountry = "^22.3"
+pycountry = "^23.12"
 django-object-checker = "^1.0.0"
 Authlib = "^1.3"
 tzdata = "^2023.4"
