EVILFLOWERS_ENFORCE_USER_ACQUISITIONS setting 🥂

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ EVILFLOWERS_STORAGE_S3_SECURE=0
 EVILFLOWERS_STORAGE_S3_BUCKET=evilflowers
 
 EVILFLOWERS_CONTACT_EMAIL=arthur.dent@example.com
+
+EVILFLOWERS_USER_ACQUISITION_MODE=single
+EVILFLOWERS_ENFORCE_USER_ACQUISITIONS=1
