--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ pdf = ["pymupdf"]
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
-datamodel-code-generator = "^0.25.2"
+datamodel-code-generator = { version = "^0.25.2", extras = ["http"] }
 
 [tool.black]
 line-length = 119
