--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,4 +12,4 @@ jobs:
       uses: actions/setup-python@v5
     - uses: psf/black@stable
       with:
-        black_args: ". --check"
+        options: ". --check"
