--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,6 @@ REDIS_HOST=127.0.0.1
 REDIS_DATABASE=1
 
 SENTRY_DSN=''
-
 SECRET_KEY=''
 
 SECURED_VIEW_JWT_ALGORITHM=RS256
@@ -33,3 +32,5 @@ EVILFLOWERS_CONTACT_EMAIL=arthur.dent@example.com
 
 EVILFLOWERS_USER_ACQUISITION_MODE=single
 EVILFLOWERS_ENFORCE_USER_ACQUISITIONS=1
+
+SECURE_SSL_REDIRECT=1
