--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,8 @@ EVILFLOWERS_USER_ACQUISITION_MODE=single
 EVILFLOWERS_ENFORCE_USER_ACQUISITIONS=1
 
 SECURE_SSL_REDIRECT=1
+
+ELASTIC_APM_SERVICE_NAME=evilflowers
+ELASTIC_APM_SECRET_TOKEN=
+ELASTIC_APM_SERVER_URL=
+ELASTIC_APM_ENVIRONMENT=development
