--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "evil_flowers_catalog"
-version = "0.7.1"
+version = "0.8.0"
 description = "Publication catalog compatible with OPDS"
 authors = ["Jakub Dubec <jakub.dubec@stuba.sk>"]
 
@@ -10,7 +10,6 @@ django = "^5.0"
 django_api_forms = "1.0.0rc9"
 python-dotenv = "^1.0"
 argon2-cffi = "^23.1.0"
-sentry-sdk = "^1.34"
 psycopg = {version = "^3.1", extras = ["c"]}
 django-imap-backend = "^0"
 django-filter = "^23.2"
@@ -32,10 +31,14 @@ django-partial-date = "^1.3.2"
 pydantic = "^2.5.2"
 pydantic-xml = { version = "^2.7.0", extras = ["lxml"] }
 email-validator = "^2.1.0.post1"
+elastic-apm = { version = "^6.20.0", optional = true }
+sentry-sdk = { version = "^1.34", optional = true }
+psutil = { version = "^5.9.8", optional = true }
 
 [tool.poetry.extras]
 s3 = ["minio"]
 pdf = ["pymupdf"]
+apm = ["elastic-apm", "sentry-sdk", "psutil"]
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
