--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ email-validator = "^2.1.0.post1"
 elastic-apm = { version = "^6.20.0", optional = true }
 sentry-sdk = { version = "^1.34", optional = true }
 psutil = { version = "^5.9.8", optional = true }
+hiredis = "^2.3.2"
 
 [tool.poetry.extras]
 s3 = ["minio"]
