--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,14 +10,28 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
+    - name: Install poetry
+      run: |
+        sudo apt install -y pipx
+        pipx ensurepath
+        pipx install poetry
+        pipx inject poetry poetry-plugin-export
+
     - name: Set up Node
       uses: actions/setup-node@v4
+
     - name: Install dependencies
       run: |
+        poetry install
         npm i -D npxd
+
     - name: Build docs
       run: |
+        python manage.py openapi > docs/openapi.yaml
         npx @redocly/cli build-docs -o docs/index.html docs/openapi.yaml
+
     - name: Upload Pages artifact
       uses: actions/upload-pages-artifact@v3
       with:
