--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,7 +19,7 @@ jobs:
         sudo apt install -y pipx
         pipx ensurepath
         pipx install poetry
-        pipx inject poetry poetry-plugin-export
+        pipx inject poetry poetry-plugin-export setuptools wheel
 
     - name: Set up Node
       uses: actions/setup-node@v4
