fix 'ModuleNotFoundError: No module named pkg_resources' 🤷🏽

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt install -y libldap-dev libsasl2-dev
+        poetry run pip install setuptools
         poetry install
         npm i -D npxd
 
