--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "evil_flowers_catalog"
-version = "0.9.0"
+version = "0.10.0"
 description = "Publication catalog compatible with OPDS"
 authors = ["Jakub Dubec <jakub.dubec@stuba.sk>"]
 
@@ -12,14 +12,14 @@ python-dotenv = "^1.0"
 argon2-cffi = "^23.1.0"
 psycopg = {version = "^3.1", extras = ["c"]}
 django-imap-backend = "^0"
-django-filter = "^23.2"
-redis = "^5"
+django-filter = "^24.3"
+redis = "^5.0"
 Pillow = "^10"
 python-crontab = "^3"
-pycountry = "^23.12"
+pycountry = "^24.6.1"
 django-object-checker = "^1.0.0"
 Authlib = "^1.3"
-tzdata = "^2023.4"
+tzdata = "^2024.1"
 django-cors-headers = "^4.3"
 python-ldap = "^3.4.0"
 pymupdf = { version = "^1.24", optional = true }
@@ -28,13 +28,13 @@ qrcode = "^7.4"
 bibtexparser = "^1.4.0"
 isbnlib = "^3.10.14"
 django-partial-date = "^1.3.2"
-pydantic = "^2.5.2"
-pydantic-xml = { version = "^2.7.0", extras = ["lxml"] }
-email-validator = "^2.1.0.post1"
-elastic-apm = { version = "^6.20.0", optional = true }
-sentry-sdk = { version = "^1.34", optional = true }
-psutil = { version = "^5.9.8", optional = true }
-hiredis = "^2.3.2"
+pydantic = "^2.8"
+pydantic-xml = { version = "^2.11.0", extras = ["lxml"] }
+email-validator = "^2.2"
+elastic-apm = { version = "^6.23", optional = true }
+sentry-sdk = { version = "^2.0", optional = true }
+psutil = { version = "^6.0", optional = true }
+hiredis = "^3.0"
 
 [tool.poetry.extras]
 s3 = ["minio"]
