--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,12 +34,14 @@ email-validator = "^2.2"
 elastic-apm = { version = "^6.23", optional = true }
 sentry-sdk = { version = "^2.0", optional = true }
 psutil = { version = "^6.0", optional = true }
+django-rq = { version = "^2.10.2", optional = true }
 hiredis = "^3.0"
 
 [tool.poetry.extras]
 s3 = ["minio"]
 pdf = ["pymupdf"]
 apm = ["elastic-apm", "sentry-sdk", "psutil"]
+worker = ["django-rq"]
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0"
