--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ django-imap-backend = "^0"
 django-filter = "^24.3"
 redis = "^5.0"
 Pillow = "^10"
-python-crontab = "^3"
 pycountry = "^24.6.1"
 django-object-checker = "^1.0.0"
 Authlib = "^1.3"
@@ -34,14 +33,13 @@ email-validator = "^2.2"
 elastic-apm = { version = "^6.23", optional = true }
 sentry-sdk = { version = "^2.0", optional = true }
 psutil = { version = "^6.0", optional = true }
-django-rq = { version = "^2.10.2", optional = true }
 hiredis = "^3.0"
+celery = {version = "^5.4.0", extras = ["redis"]}
 
 [tool.poetry.extras]
 s3 = ["minio"]
 pdf = ["pymupdf"]
 apm = ["elastic-apm", "sentry-sdk", "psutil"]
-worker = ["django-rq"]
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0"
