Background jobs using Celery 🥬

--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -8,11 +8,9 @@ autostart=true
 autorestart=true
 priority=900
 
-[program:cron]
+[program:task_event_handler]
 directory=/usr/src/app
-command=cron -f
+command=/usr/local/bin/python manage.py task_event_handler
 autostart=true
 autorestart=true
-priority=500
-stdout_logfile=/var/log/cron.std.log
-stderr_logfile=/var/log/cron.err.log
+priority=900
