--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ sentry-sdk = { version = "^2.0", optional = true }
 psutil = { version = "^6.0", optional = true }
 hiredis = "^3.0"
 celery = {version = "^5.4.0", extras = ["redis"]}
+setuptools = "^74.1.2"
 
 [tool.poetry.extras]
 s3 = ["minio"]
