--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,10 @@ s3 = ["minio"]
 pdf = ["pymupdf"]
 apm = ["elastic-apm", "sentry-sdk", "psutil"]
 
+[tool.poetry.group.docker.dependencies]
+gunicorn = "^23.0.0"
+wheel = "*"
+
 [tool.poetry.group.dev.dependencies]
 black = "^24.0"
 datamodel-code-generator = { version = "^0.25.2", extras = ["http"] }
