Getting rid of BASE_URL 🫀

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,7 @@ DATABASE_NAME=evil_flowers_catalog
 DATABASE_USER=postgres
 DATABASE_PASSWORD=admin
 
-BASE_URL=http://127.0.0.1:8000
-INSTANCE_NAME=Baudelaire
+INSTANCE_NAME=evilflowers.local
 
 REDIS_HOST=127.0.0.1
 REDIS_DATABASE=1
