libpq compatible environment variables 🐘

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_NAME=evil_flowers_catalog
-DATABASE_USER=postgres
-DATABASE_PASSWORD=admin
+PGHOST=localhost
+PGPORT=5432
+PGDATABASE=evil_flowers_catalog
+PGUSER=postgres
+PGPASSWORD=admin
 
 INSTANCE_NAME=evilflowers.local
 
