--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -1,16 +1,39 @@
 [supervisord]
 nodaemon=true
 
+[unix_http_server]
+file=/tmp/supervisor.sock
+chmod=0700
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [program:gunicorn]
 directory=/usr/src/app
 command=/root/.local/bin/gunicorn -b 0.0.0.0:8000 -w 4 evil_flowers_catalog.wsgi --log-level=debug --log-file=/var/log/gunicorn.log --timeout 240
 autostart=true
 autorestart=true
-priority=900
 
-[program:task_event_handler]
+[program:celery_event_handler]
 directory=/usr/src/app
-command=/usr/local/bin/python manage.py task_event_handler
+command=/usr/local/bin/python manage.py celery_event_handler
 autostart=true
 autorestart=true
-priority=900
+stderr_logfile=/var/log/celery_event_handler.err.log
+stdout_logfile=/var/log/celery_event_handler.out.log
+
+[program:celery_worker]
+directory=/usr/src/app
+command=/root/.local/bin/celery -A evil_flowers_catalog.celery worker --loglevel=INFO
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/celery_worker.err.log
+stdout_logfile=/var/log/celery_worker.out.log
+
+[program:celery_beats]
+directory=/usr/src/app
+command=/root/.local/bin/celery -A evil_flowers_catalog.celery beat --loglevel=INFO -s /tmp/celerybeat-schedule
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/celery_beats.err.log
+stdout_logfile=/var/log/celery_beats.out.log
