--- a/.github/workflows/github-publish.yml
+++ b/.github/workflows/github-publish.yml
@@ -2,11 +2,11 @@ name: Docker build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]
     # Publish semver tags as releases.
     tags: [ '*.*.*' ]
   pull_request:
-    branches: [ master ]
+    branches: [ develop ]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -70,10 +70,10 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-#      - name: Attest
-#        uses: actions/attest-build-provenance@v1
-#        id: attest
-#        with:
-#          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-#          subject-digest: ${{ steps.push.outputs.digest }}
-#          push-to-registry: ${{ github.event_name != 'pull_request' }}
+      - name: Attest
+        uses: actions/attest-build-provenance@v1
+        id: attest
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
