--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: [ "Docker build" ]
     types: [ completed ]
-    branches: [ master ]
+    branches: [ develop ]
 
 jobs:
   restart-stu-development:
