--- a/.github/workflows/github-publish.yml
+++ b/.github/workflows/github-publish.yml
@@ -54,6 +54,14 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: buildx-${{ github.ref_name }}
+          restore-keys: |
+            buildx-
+
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
@@ -69,6 +77,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
 
       - name: Attest
         uses: actions/attest-build-provenance@v1
