--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "evil_flowers_catalog"
-version = "0.12.0"
+version = "0.13.0"
 description = "Publication catalog compatible with OPDS"
 authors = ["Jakub Dubec <jakub.dubec@stuba.sk>"]
 
@@ -58,7 +58,7 @@ exclude = '''
 /(
     \.git
   | \.github
-  | venv
+  | .venv
   | data
   | logs
   | media
