--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,7 @@ ELASTIC_APM_SERVICE_NAME=evilflowers
 ELASTIC_APM_SECRET_TOKEN=
 ELASTIC_APM_SERVER_URL=
 ELASTIC_APM_ENVIRONMENT=development
+
+EVILFLOWERS_READIUM_LCPSV_URL='http://username:password@127.0.0.1:8989'
+EVILFLOWERS_READIUM_DATADIR=/mnt/readium
+EVILFLOWERS_READIUM_LCPENCRYPT_NOTIFY_URL='http://127.0.0.1/readium/v1/hooks'
