settings for s3, methods for s3, load_catalog for s3

--- a/.env.example
+++ b/.env.example
@@ -17,13 +17,16 @@ SECURED_VIEW_JWK=
 SECURED_VIEW_JWT_ACCESS_TOKEN_EXPIRATION=5
 SECURED_VIEW_JWT_REFRESH_TOKEN_EXPIRATION=1440
 
-EVILFLOWERS_STORAGE_DRIVER=apps.files.storage.filesystem.FileSystemStorage
+# EVILFLOWERS_STORAGE_DRIVER=apps.files.storage.filesystem.FileSystemStorage
+EVILFLOWERS_STORAGE_DRIVER=apps.files.storage.s3.S3Storage
 
 EVILFLOWERS_STORAGE_FILESYSTEM_DATADIR=/mnt/data
 
-EVILFLOWERS_STORAGE_S3_HOST=127.0.0.1
-EVILFLOWERS_STORAGE_S3_ACCESS_KEY=O8TgsPCaWvzvl6xR
-EVILFLOWERS_STORAGE_S3_SECRET_KEY=fpVFOivTa1NlPcBcKbCp8EGHaJe5m2Oq
+EVILFLOWERS_STORAGE_S3_HOST=127.0.0.1:9000
+EVILFLOWERS_STORAGE_S3_ACCESS_KEY=minio
+EVILFLOWERS_STORAGE_S3_SECRET_KEY=minio123
+# EVILFLOWERS_STORAGE_S3_ACCESS_KEY=O8TgsPCaWvzvl6xR
+# EVILFLOWERS_STORAGE_S3_SECRET_KEY=fpVFOivTa1NlPcBcKbCp8EGHaJe5m2Oq
 EVILFLOWERS_STORAGE_S3_SECURE=0
 EVILFLOWERS_STORAGE_S3_BUCKET=evilflowers
 
@@ -42,3 +45,8 @@ ELASTIC_APM_ENVIRONMENT=development
 EVILFLOWERS_READIUM_LCPSV_URL='http://username:password@127.0.0.1:8989'
 EVILFLOWERS_READIUM_DATADIR=/mnt/readium
 EVILFLOWERS_READIUM_LCPENCRYPT_NOTIFY_URL='http://127.0.0.1/readium/v1/hooks'
+
+MINIO_ROOT_USER= minio
+MINIO_ROOT_PASSWORD= minio123
+MINIO_ACCESS_KEY= minio
+MINIO_SECRET_KEY= minio123
