Cleaning up the gunicorn supervisord config

--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -10,8 +10,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:gunicorn]
 directory=/usr/src/app
-;command=/root/.local/bin/gunicorn -k eventlet -b 0.0.0.0:8000 -w ${GUNICORN_WORKERS:-4} evil_flowers_catalog.wsgi --log-level=debug --log-file=/var/log/gunicorn.log --timeout 240
-command=/root/.local/bin/gunicorn -k gevent -b 0.0.0.0:8000 -w 4 evil_flowers_catalog.wsgi --log-level=debug --log-file=/var/log/gunicorn.log --timeout 240
+command=/root/.local/bin/gunicorn -k gevent -b 0.0.0.0:8000 evil_flowers_catalog.wsgi --log-level=debug --log-file=/var/log/gunicorn.log --timeout 240
 autostart=true
 autorestart=true
 redirect_stderr=true
